Java Marine API - RELEASE NOTES
Version @VERSION@ (b@BUILD_ID@)
<http://ktuukkan.github.io/marine-api/>

This is a pre-alpha release, major API changes may be introduced in future
versions. Released on @RELEASE_DATE@.

CHANGES

 * TODO

NEW FEATURES

 * Partial support for AIS (Automatic Identification System); decoding of AIS
   messages 1, 2, 3, 4, 5, 18 and 19 and listener base class for receiving
   updates on each, including utility classes for extracted data.

 * Support for VDM sentences; the NMEA 0183 layer of AIS messages.

ACKNOWLEDGEMENTS

 * Majority of AIS support written by József Lázár.